Re: https://github.com/triniti/admin-ui-plugin-js/issues/117 increase .alert-container z-index (#118)

--- a/src/components/alert/styles.scss
+++ b/src/components/alert/styles.scss
@@ -63,7 +63,7 @@ th.alert,
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1040;
+  z-index: 1100;
   margin: 0 auto;
   padding: .5rem 1rem;
   max-width: 680px;
